--- a/src/scss/custom/a-website-to-destroy-all-websites/_chapter-1.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_chapter-1.scss
@@ -236,6 +236,7 @@
   &__label {
     @include label;
 
+    clip-path: $blank-clip;
     left: 50%;
     transform: translateX(-50%);
     white-space: nowrap;
