--- a/src/scss/custom/a-website-to-destroy-all-websites/_chapter-3.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_chapter-3.scss
@@ -36,13 +36,13 @@
         grid-column: 2 / span 6;
         text-decoration: none;
         color: #9a9a9a;
+        font-style: italic;
       }
     }
     ins {
       @include screen(lg) {
         text-decoration: none;
         grid-column: 10 / span 6;
-        font-style: italic;
       }
     }
   }
@@ -57,6 +57,8 @@
 
     font-size: 4.2rem;
     hyphens: auto;
+    overflow-x: clip;
+    max-width: 100vw;
 
     @include screen(sm) {
       font-size: clamp(4.2rem, 8.8vw, 7rem);
