🧼 — Compress JS, fix main image loading

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -64,7 +64,7 @@ topics:
                 <span>and build the <em>Web We Want</em>.</span>
             </div>
             <figure class="intro__card">
-                <img src="{{ imgDir }}/odilon-redon_captive-pegasus.jpg" alt="" />
+                <img src="{{ imgDir }}/odilon-redon_captive-pegasus.jpg" alt="" width="700" loading="eager" />
                 <figcaption>Captive Pegasus, <cite>Odilon Redon</cite> (1889)</figcaption>
                 <!-- https://www.artic.edu/artworks/79492/captive-pegasus -->
             </figure> 
