🖼️  — Add art links and TOC link style

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -65,8 +65,7 @@ topics:
             </div>
             <figure class="intro__card">
                 <img src="{{ imgDir }}/odilon-redon_captive-pegasus.jpg" alt="" width="700" loading="eager" />
-                <figcaption>Captive Pegasus, <cite>Odilon Redon</cite> (1889)</figcaption>
-                <!-- https://www.artic.edu/artworks/79492/captive-pegasus -->
+                <figcaption><a href="https://www.artic.edu/artworks/79492/captive-pegasus">Captive Pegasus, <cite>Odilon Redon</cite> (1889)</a></figcaption>
             </figure> 
             <a class="intro__label intro__label--author" href="/">A tiny website by Henry (from Online)</a>
             <span class="intro__label intro__label--word-count">~3100 words; about a 15 minute read</a>
@@ -90,7 +89,7 @@ topics:
                     <h2 class="chapter-one-hero__title"><span>The</span> <span>internet</span> <span>is bad.</span></h2>
                     <figure class="chapter-one-hero__frame">
                         <img src="{{ imgDir }}/bosch-follower_christs-descent-into-hell.jpg" alt="">
-                        <figcaption>Christ’s Descent Into Hell, <cite>Follower of Hieronymus Bosch</cite> (~1625)</figcaption>
+                        <figcaption><a href="https://www.metmuseum.org/art/collection/search/435725">Christ’s Descent Into Hell, <cite>Follower of Hieronymus Bosch</cite> (~1625)</a></figcaption>
                     </figure>
                 </div>
             </header>
@@ -111,8 +110,7 @@ topics:
                     <div class="drift">
                         <img src="{{ imgDir }}/george-innes_pastoral-scene.jpg" alt="">
                     </div>
-                    <figcaption>Pastoral Scene, <cite>George Innes</cite> (1857)</figcaption>
-                    <!-- https://artmuseum.princeton.edu/art/collections/objects/23254 -->
+                    <figcaption><a href="https://artmuseum.princeton.edu/art/collections/objects/23254">Pastoral Scene, <cite>George Innes</cite> (1857)</a></figcaption>
                 </figure>
             </div>
             <div class="rendered three-up">
@@ -156,7 +154,7 @@ topics:
                         <div class="drift">
                             <img src="{{ imgDir }}/tamara-de-lempicka_autoportrait.jpeg" alt="">
                         </div>
-                        <figcaption>Autoportrait, <cite>Tamara de Lempicka</cite> (1929)</figcaption>
+                        <figcaption><a href="https://en.wikipedia.org/wiki/Autoportrait_(Tamara_in_a_Green_Bugatti)">Autoportrait, <cite>Tamara de Lempicka</cite> (1929)</a></figcaption>
                     </figure>
                 </div>
             </header>
@@ -182,7 +180,7 @@ topics:
                 </p>
                 <figure>
                     <img src="{{ imgDir }}/salvador-dali_car-clothing-2.jpg" alt="" />
-                    <figcaption>Car Clothing, <cite>Salvador Dalí</cite> (1941)</figcaption>
+                    <figcaption><a href="https://www.salvador-dali.org/en/artwork/ced/download-documents/the-importance-of-the-car-in-the-work-of-salvador-dali-the-dressed-car/">Car Clothing, <cite>Salvador Dalí</cite> (1941)</a></figcaption>
                 </figure>
             </aside>
         </section>
@@ -251,7 +249,7 @@ topics:
                     <div class="drift">
                         <img src="{{ imgDir }}/john-martin_the-plains-of-heaven.jpg" eleventy:widths="1500" alt="">
                     </div>
-                    <figcaption>The Plains of Heaven, <cite>John Martin</cite> (1851-3)</figcaption>
+                    <figcaption><a href="https://www.tate.org.uk/art/artworks/martin-the-plains-of-heaven-t01928">The Plains of Heaven, <cite>John Martin</cite> (1851-3)</a></figcaption>
                 </figure>
             </header>
             <div class="consider">
@@ -311,7 +309,7 @@ topics:
                     <div class="drift">
                     <img src="{{ imgDir }}/caspar-david-friedrich_abbey-among-oak-trees.jpg" eleventy:widths="1500" alt="">
                     </div>
-                    <figcaption>Abbey Among Oak Trees, <cite>Caspar David Friedrich</cite> (1810)</figcaption>
+                    <figcaption><a href="https://en.wikipedia.org/wiki/The_Abbey_in_the_Oakwood">The Abbey in the Oakwood, <cite>Caspar David Friedrich</cite> (1810)</a></figcaption>
                 </figure>
             </div>
             <div class="rendered">
@@ -375,7 +373,7 @@ topics:
                 </div>
                 <figure>
                     <img src="{{ imgDir }}/albert-bierstadt_sunrise-on-the-matterhorn.jpg" alt="">
-                    <figcaption>Sunrise on the Matterhorn, <cite>Albert Bierstadt</cite> (after 1875)</figcaption>
+                    <figcaption><a href="https://www.metmuseum.org/art/collection/search/10158">Sunrise on the Matterhorn, <cite>Albert Bierstadt</cite> (after 1875)</a></figcaption>
                 </figure>
             </header>
             <div class="rendered">
