👩‍🔬 — Add analytics script

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -416,7 +416,7 @@ topics:
     </main>
     <script>document.documentElement.classList.remove('no-js')</script>
     <script src="/js/a-website-to-destroy/index.js" type="module"></script>
-
+    <script src="https://cdn.usefathom.com/script.js" data-site="ADEBIAUD" defer></script>
 </body>
 
 </html>
