--- a/src/scss/custom/a-website-to-destroy-all-websites/_chapter-6.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_chapter-6.scss
@@ -30,7 +30,7 @@
     font-style: italic;
     display: block;
     text-align: center;
-    color: #9a9a9a;
+    color: #777;
   }
 }
 .chapter-six-hero {
