--- a/src/scss/custom/a-website-to-destroy-all-websites/_chapter-3.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_chapter-3.scss
@@ -35,7 +35,7 @@
       @include screen(lg) {
         grid-column: 2 / span 6;
         text-decoration: none;
-        color: #9a9a9a;
+        color: #777;
         font-style: italic;
       }
     }
@@ -67,7 +67,7 @@
 
     span {
       font-style: italic;
-      color: #9a9a9a;
+      color: #777;
     }
   }
 }
