--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -10,6 +10,7 @@ og: "https://henry.codes/img/og/og-a-website-to-destroy-all-websites.png"
 tags:
 - article
 category: journal
+withoutTransition: true
 topics:
 - html
 - css
