--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -47,6 +47,9 @@ topics:
     <meta property="og:type" content="website">
     <meta property="og:description" content="{{ pageDescription }}">
 
+    <!-- Webmentions -->
+    <link rel="webmention" href="https://webmention.io/henry.codes/webmention" />
+    <link rel="pingback" href="https://webmention.io/henry.codes/xmlrpc" />
 
     <link rel="preload" href="/fonts/TRJNDaVinci-Regular.woff" as="font" type="font/woff" crossorigin />
     <link rel="preload" href="/fonts/TRJNDaVinci-Italic.woff" as="font" type="font/woff" crossorigin />
