🔠 — Another typo lol

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -167,7 +167,7 @@ topics:
                 {% asMarkdown %}
                     The onset of the automobile was a revelation for access and personal liberty. With the advent of cars, members of society could travel farther, get more done in their day, and bend their limited time more to their creative will!
 
-                    But as time wore on and the industrialization & proliferation of the automobile progressed, its marginal utility diminished —  the industry started to society fewer & fewer benefits, and take more & more in exchange[^1].
+                    But as time wore on and the industrialization & proliferation of the automobile progressed, its marginal utility diminished —  the industry started to offer society fewer & fewer benefits, and take more & more in exchange[^1].
 
                     In American cities, for example: though at first the automobile enabled humans to travel further distances, it now _demanded_ that humans travel those distances, and _demanded_ infrastructure be created & maintained to enable it.[^2] Many now _must_ use an automobile to get everything done in their town in a day, and must pay & take time for that automobile's fueling & maintenance.[^3]
 
