--- a/src/scss/custom/a-website-to-destroy-all-websites/_chapter-6.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_chapter-6.scss
@@ -6,6 +6,7 @@
   @include magazine-grid;
 
   margin-block-end: var(--spacing-large);
+  scroll-margin-block-start: 0;
 
   > * {
     grid-column: 1 / -1;
