📅 — Add 2025 recap post

--- a/src/scss/base/_rendered.scss
+++ b/src/scss/base/_rendered.scss
@@ -79,6 +79,12 @@
   }
 }
 
+figcaption {
+  font-size: 0.75rem;
+  margin-block-start: 0.5em;
+  font-style: italic;
+}
+
 .editors-note,
 .target-audience,
 .under-construction,
