--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -37,6 +37,10 @@
   font-style: italic;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .with-soft-outline {
   border: 1px solid $color-border-light;
 }
