--- a/src/custom/the-first-thing-i-did-was-run/index.njk
+++ b/src/custom/the-first-thing-i-did-was-run/index.njk
@@ -3,11 +3,10 @@ title: 'The first thing I did last year was run'
 slug: the-first-thing-i-did-last-year-was-run
 permalink: writing/the-first-thing-i-did-last-year-was-run/index.html
 layout: 'layouts/blank.njk'
-abstract: Plenty of work was done, plenty of websites made. Here's a recap of everything I did that has nothing at all to do with work or websites.
-
+abstract: On the eve of the new year, 2025, I was possessed by the spirit of adventure, and drove to Wyoming in the middle of the night. Hijinks, as is eternally their way, ensued.
 publishDate: 2026-01-07T09:00
-heroImage: https://res.cloudinary.com/henry-codes/image/upload/v1767749658/IMG_8499_rp2l31.jpg
-useHero: true
+withoutTransition: true
+useHero: false
 hasToc: false
 customThreshold: 150
 tags:
@@ -24,7 +23,7 @@ topics:
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The first thing I did last year was run | Henry From Online</title>
-    <meta name="description" content="{{ pageDescription }}" />
+    <meta name="description" content="{{ abstract }}" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png" />
@@ -41,14 +40,13 @@ topics:
     <meta property="og:url" content="https://henry.codes{{ page.url }}">
     <meta property="og:image" content="{{ og }}">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="{{ pageDescription }}">
+    <meta property="og:description" content="{{ abstract }}">
 
     <!-- Webmentions -->
     <link rel="webmention" href="https://webmention.io/henry.codes/webmention" />
     <link rel="pingback" href="https://webmention.io/henry.codes/xmlrpc" />
 
     <link rel="preload" href="/fonts/subset-Louize.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="/fonts/PPNeueMontreal-Book.woff2" as="font" type="font/woff2" />
 
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/custom/the-first-thing-i-did-was-run/index.css" />
@@ -59,7 +57,7 @@ topics:
     <canvas class="stars"></canvas>
     <nav>
       <div>A tiny website by <a href="/" class="home-link">Henry (From Online)</a></div>
-      <div>which I am publishing in January 2026</div>
+      <div>which I am publishing in February 2026</div>
       <div>for your exclusive reading pleasure :)</div>
     </nav>
     <header class="hero">
@@ -76,7 +74,7 @@ topics:
     <article class="article-content rendered">
       <section class="section">
         {% asMarkdown %}
-          I found myself on the eve of the new year lying restlessly on the floor of my apartment _(on this great Persian Mashhad rug from like 1937 which is ornate and beautiful, and for which I negotiated a blood-curdlingly screaming deal on a few years back, but which of course has nothing to do with this story)_. Most of my friends were taking the year off hosting; I didn't want to go out for the evening and sit in cold traffic around Denver to cheers with strangers, and I would be damned if I'd start my grand adventurous year with a story of staying home. {data-show-clock data-set-scene="light"}
+          I found myself on the eve of the new year lying restlessly on the floor of my apartment _(on [this great Mashhad rug](){.hover data-target=rug} from like 1937 which is ornate and beautiful, and for which I negotiated a blood-curdlingly screaming deal on a few years back, but which of course has nothing to do with this story)_. Most of my friends were taking the year off hosting; I didn't want to go out for the evening and sit in cold traffic around Denver to cheers with strangers, and I would be damned if I'd start my grand adventurous year with a story of staying home. {data-show-clock data-set-scene="light"}
 
           So I grabbed the keys.
         {% endasMarkdown %}
@@ -96,7 +94,7 @@ topics:
       </section>
       <section class="section" data-set-scene="pitchBlack">
         {% asMarkdown %}
-          At around 2:30 in the morning, after many hours of wide-eyed abyssal staring along Highway 287 and then I-80, and then 287 again, and after many hours of an audiobook recording of Wuthering Heights narrated by someone who had only had a Northern accent ever loosely described to them, I hit a wall. I felt like my neck was gonna fall off my shoulders at the weight of my gigantic head, which I had somehow only now become aware of. I parked the car to nap — I did plan for this eventuality, and did have a paper-thin blanket available to me.
+          At around 2:30 in the morning, after many hours of wide-eyed abyssal staring along Highway 287 and then I-80, and then 287 again, and after many hours of an audiobook recording of Wuthering Heights narrated by someone who had only had a Northern accent ever loosely described to them, I hit a wall. I felt like my neck would fall off my shoulders at the sheer weight of my gigantic head, which I had somehow only now become aware of. I parked the car to nap — I did plan for this eventuality, and did quite sensibly have a paper-thin blanket folded at-the-ready in the passenger seat.
 
           It is here I should mention my car is a 30-year-old rear-wheel-drive German car, and the part that is important is that it is 30 years old. I woke with a phone alarm to a very, very cold car, which I had parked with the engine off on the side of a highway in 0ºF weather _(or -18ºC, had this story taken place outside of the United States)_, to let cool for half an hour. I restarted the engine to get back on the road, and a while after pulling back off the shoulder, I realized, with my honed shrewdness and near superhuman situational awareness, that it wasn't getting any warmer. Bleary-eyed and with hands gone completely white from the cold, I turned to the fourth wall with an infuriating "it’s a living" sort of expression. I donned gloves and wrapped the blanket tightly around my waist and legs, and <del>quite idiotically</del> <ins class="down">quite bravely</ins> persisted.
 
@@ -125,24 +123,26 @@ topics:
           I had driven 9 and a half hours into the wilderness of Wyoming to look at a snow fog so thick I couldn't see the shoulder on the other side of the road.
         {% endasMarkdown %}
       </section>
-      <section class="section"  data-set-scene="light">
+      <section class="section">
         {% asMarkdown %}
-          I went back to blinking dumbly, this time for a longer increment, to really savor the dumbness of the blinks, the sheer idiotic heft of the eyelids, the stupid clapping noise they made. Once I had reveled to my satisfaction, I started up the car, again, and pointed it dejectedly in the direction of the nearest town, Jackson, where I parked at one of the many visitor centers, and fell instantly to sleep.
+          I went back to blinking dumbly, this time for a longer increment, to really savor the dumbness of the blinks, the sheer idiotic heft of the eyelids, the stupid clapping noise they made. Once I had blinked to my satisfaction, I started up the car, again, and pointed it dejectedly in the direction of the nearest town, Jackson, where I parked at one of the many visitor centers, and fell instantly to sleep.
 
-          Ninety minutes' rest hardly refreshed my weary and frozen bones. I got up to go snag a parks sticker from inside the center, to find by rattling helplessly on its front doors, quite comically, that it was one of the many visitors centers that closes in that six month window from November into Spring. I went and sat fully on my ass in the snowy parking lot, and blinked some more.
+          Ninety minutes' rest hardly refreshed my weary and frozen bones. I got up to go snag a parks sticker from inside the center, to find by rattling helplessly on its front doors, that it was one of the many visitors centers that closes in that six month window from November into Spring. I went and sat fully on my ass in the snowy parking lot, and blinked some more.
 
-          There's a delightful little bakery & restaurant in Jackson called The Bunnery, where they'll serve you oatmeal with berries, and a cup of coffee so bad you'll worry you offended someone on the way in. I know this because I went there and I had both of these things, and I tipped very well as a profuse apology for whatever I did to the waiter. Back in the car, I reviewed my options. Park: closed, trails: unmaintained, snowshoes: not owned, sunrise: unwitnessed. As the LCD screen ticked up to 10 am, I turned the ignition for the last time, and started driving home.
+          There's a delightful little bakery & restaurant in Jackson called The Bunnery, where they'll serve you oatmeal with berries, and a cup of coffee so bad you'll worry you offended someone on the way in. I know this because I went there and I had both of these things, and I tipped very well as a profuse apology for however I had scorned the waiter. 
+          
+          Back in the car, I reviewed my options. Park: closed, trails: unmaintained, snowshoes: not owned, sunrise: unwitnessed. As the LCD screen ticked up to 10 am, I turned the ignition for the last time, and started driving home.
         {% endasMarkdown %}
       </section>
-      <section class="section" data-hide-clock data-set-scene="final">
+      <section class="section" data-hide-clock>
         <div class="two-col">
             <img alt="A frigid Wyoming two-lane mountain road, as seen through the windshield of the author's car. White snowy Voronoi patterns snake across the asphalt." src="https://res.cloudinary.com/henry-codes/image/upload/v1767751623/DSCF0157_ipbjz8.jpg" />
-            <video autoplay muted loop src="https://res.cloudinary.com/henry-codes/video/upload/v1767751618/IMG_8505_ickr3b.mp4" />
+            <video autoplay muted loop src="https://res.cloudinary.com/henry-codes/video/upload/v1770925002/IMG_8505_ickr3b.mp4" />
         </div>
       </section>
       <section class="section">
         {% asMarkdown %}
-          The daylight drive of return was beautiful. A couple of stressful moments where the blizzard raged its hardest, but mostly it was peace. Snaking patterns of drift over the asphalt, volumetric beams intermittently reaching the road like the sideways glances of god, an ice-covered river caught halfway between polar blue and seafoam green in the rare bright light that filtered down through the storm. Once I was out of the Rockies again and onto the plains, the storm cleared, and in that great, yawning, too-big Wyoming sky I saw the first morning of the year. I kept the stereo silent, and I drove with a steady foot. I felt my manic energy of the night before _(and if I may be candid with you, now that I consider us old friends, from the _months_ before)_ — melt away from me as the snow slipped off the roof and hood of the car.
+          The daylight drive of return was beautiful. A couple of stressful moments where the blizzard raged its hardest, but mostly it was peace. Snaking patterns of drift over the asphalt, volumetric beams intermittently reaching the road like the sideways glances of god, an ice-covered river caught halfway between polar blue and seafoam green in the rare bright light that filtered down through the storm. Once I was out of the Rockies again and onto the plains, the storm cleared, and in that great, yawning, too-big Wyoming sky I saw the first morning of the year. I kept the stereo silent, and I drove with a steady foot. I felt my manic energy of the night before _(and if I may be candid with you, now that I consider us old friends, from the _months_ before)_ — melt away from me as the snow slipped off the roof and hood of the car.  {data-set-scene="final"}
         {% endasMarkdown %}
       </section>
       <div class="flow" style="--standard-column: 3 / span 8">
@@ -164,7 +164,10 @@ topics:
         <img alt="A black coupe covered in snow, parked aside a national parks sign for Grand Teton National Park. The fore and background are both completely snowy and white." src="https://res.cloudinary.com/henry-codes/image/upload/v1767751225/DSCF0153_1_zskdo0.jpg" />
       </div>
     </article>
-      <script data-taxi-reload src="/js/the-first-thing-i-did-was-run/index.js"></script>
+    <div class="hover-images">
+      <img class="hover-image" id="rug" src="https://res.cloudinary.com/henry-codes/image/upload/v1770923500/mashad_ifumme.jpg" alt=""/>
+    </div>
+    <script data-taxi-reload src="/js/the-first-thing-i-did-was-run/index.js"></script>
   </main>
 </body>
 </html>
