⏱️  — Copy updates and 24hr clock

--- a/src/custom/the-first-thing-i-did-was-run/index.njk
+++ b/src/custom/the-first-thing-i-did-was-run/index.njk
@@ -150,7 +150,7 @@ topics:
       </div>
       <section class="section section--final">
         {% asMarkdown %}
-          By the time I got back to Colorado, the sun had crested its wintertime noon and was starting to set once more. I called an old friend on the phone and we talked about love and our awful taste in men, and our grand plans for 2025.
+          By the time I got back to Colorado, the sun had crested its wintertime noon and was starting to set once more. I called an old friend on the phone and we talked about love and our awful taste in men and the way friendships change with distance and our grand plans for 2025.
 
           I pulled into my garage. I sat there in the salt-blasted, filthy and weary car, and as I lazily shook loose half-daze from 16 hours of tense driving since the night before, the dashboard vents started blasting hot air.
 
