🔠 — Add opengraph title to first-thing essay

--- a/src/custom/the-first-thing-i-did-was-run/index.njk
+++ b/src/custom/the-first-thing-i-did-was-run/index.njk
@@ -41,6 +41,7 @@ topics:
     <meta property="og:url" content="https://henry.codes{{ page.url }}">
     <meta property="og:image" content="{{ og }}">
     <meta property="og:type" content="website">
+    <meta property="og:title" content="The first thing I did last year was run | Henry From Online">
     <meta property="og:description" content="{{ abstract }}">
 
     <!-- Webmentions -->
