📈 — Make sure fathom on new site

--- a/src/custom/the-first-thing-i-did-was-run/index.njk
+++ b/src/custom/the-first-thing-i-did-was-run/index.njk
@@ -171,5 +171,6 @@ topics:
     </div>
     <script data-taxi-reload src="/js/the-first-thing-i-did-was-run/index.js"></script>
   </main>
+    <script data-taxi-reload src="https://cdn.usefathom.com/script.js" data-site="ADEBIAUD" defer></script>
 </body>
 </html>
