📱 — Fix video going to full-screen on ios

--- a/src/custom/the-first-thing-i-did-was-run/index.njk
+++ b/src/custom/the-first-thing-i-did-was-run/index.njk
@@ -139,7 +139,7 @@ topics:
       <section class="section" data-hide-clock>
         <div class="two-col">
             <img alt="A frigid Wyoming two-lane mountain road, as seen through the windshield of the author's car. White snowy Voronoi patterns snake across the asphalt." src="https://res.cloudinary.com/henry-codes/image/upload/v1767751623/DSCF0157_ipbjz8.jpg" />
-            <video autoplay muted loop src="https://res.cloudinary.com/henry-codes/video/upload/v1770925002/IMG_8505_ickr3b.mp4" />
+            <video autoplay muted loop playsinline src="https://res.cloudinary.com/henry-codes/video/upload/v1770925002/IMG_8505_ickr3b.mp4" />
         </div>
       </section>
       <section class="section">
